fixed layout issue

--- a/app/assets/stylesheets/developer.css.scss
+++ b/app/assets/stylesheets/developer.css.scss
@@ -1488,8 +1488,8 @@
 
     @media (max-width: 991px) {
       #chart-title{
-        margin: -10px 0 0 100px;
-        width: 50%;
+        margin: -10px 0 0 0;
+        width: 80%;
       }
       #chart-container {
         h2 {
